--- a/server/package.json
+++ b/server/package.json
@@ -23,8 +23,12 @@
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.0",
     "pg-format": "^1.0.4",
     "prisma": "^5.21.1"
